# motocakerteam

./: About.md  Makefile  Plataforma.md  ProjectHome.md  main.cpp  test
Projects/MotoDesk/: BaseDlg.cpp  COMO EXTRAER FUNCIONES  Makefile  MyZKbMain.cpp  MyZKbMain.h  ScreenX.h  ZFileDlg.cpp  ZMenu.h  cmd.cfg  exec.cpp  main.cpp  myam.h  zCallDlg.cpp
Projects/SDL/: configure.in  ezxenv.sh  libtool  zconfig.sh  zmake.sh
Projects/ScreenX/: Makefile  ZFileDlg.cpp  am2.cfg  main.cpp  zsms.h
Projects/bochs-2.4/: Makefile  bochs  bxcommit  compilez6  config.h  merde4
Projects/clone2fs-1.2.0/: README  clone2fs
Projects/compress/: BaseDlg.h  ZFileDlg.cpp  ZFileDlg.h
Projects/crontab/: Makefile  ZFileBrowser.cpp  ZFileDlg.h  zgui.cpp
Projects/e2fsprogs-1.41.3/: MCONFIG  Makefile  clone2fs
Projects/funlights/: demonio.cpp  demonio.h  main.cpp
Projects/glib-2.0.0/: Makefile  config.h  configure  glib-2.0.pc  glib-gettextize  glib-zip  glib.spec  glibconfig.h  gmodule-2.0-uninstalled.pc  gobject-2.0.pc  gthread-2.0-uninstalled.pc  gthread-2.0.pc  ltmain.sh
Projects/hide/: Makefile  main.cpp  z6manager.h
Projects/konqueror3-embedded-0.2-20040126/: .cvsignore  Makefile  config.h  configure.in  configure.in.in  libtool
Projects/konqueror3-embedded-0.2-20040126/konq-embed/add-ons/kflashpart/: Makefile.am  kflashpart.h
Projects/konqueror3-embedded-0.2-20040126/konq-embed/add-ons/kflashpart/flashlib/: Makefile.am  Makefile.in  button.cc  character.cc  displaylist.cc  flash.cc  font.cc  graphic.cc  graphic32.h  graphic_generic.cc  matrix.cc  shape.cc  sound.cc  sprite.cc  sqrt.cc  swf.h  text.cc
Projects/konqueror3-embedded-0.2-20040126/konq-embed/lib/: .cvsignore  Makefile  Makefile.am
Projects/konqueror3-embedded-0.2-20040126/konq-embed/src/: .cvsignore  Makefile  Makefile.am  Makefile.in  bookmarks.h  configure.in.in  main.cc  mainwindow_kiosk.h  mainwindow_qpe.h  mainwindow_tv.h  mainwindow_x11.cc  popuphandler.cc  view.h
Projects/konqueror3-embedded-0.2-20040126/konq-embed/src/actions/big/: Makefile
Projects/libxml2-2.6.17/: config.h  config.status  libxml-2.0.pc  testHTML  testModule.c  testReader  testRelax  testSchemas  testXPath  xmlcatalog
Projects/pand2/: howto  zPand2.mpkg
Projects/pand2/zsoft/zsoft/zPand/ample-0.4.0/: Makefile  Makefile.in  ample.conf.example  config.h  configure  configure.ac
Projects/pand2/zsoft/zsoft/zPand/ample-0.4.0/src/: Makefile.in  entries.c
Projects/psxanda/: BCDCoder.c  BCDCoder.h  Gte.c  Mdec.c  Misc.c  Misc.h  PSEmu_Plugin_Defs.h  PsxDma.h  PsxMem.c  PsxMem.h  R3000A.c  (+15 more)
Projects/sdlcam-0.8.2/: Makefile  README  SDL_v4l.cpp  SDL_v4l_filters_thomas.c  SDL_v4l_filters_thomas.h  SDL_v4l_image.h  SDLcam  SDLcam.cfg  capture.c  configure  configure.ac  dyn_misc.h  init.c  interface.cpp  interface.h  libtool  logo.h  main.cpp  webcam.cpp  webcam.h  xml_theme.h
Projects/sdlcam-0.8.2/.deps/: SDLcam-SDL_v4l_filters.Po  SDLcam-SDL_v4l_filters_thomas.Po  SDLcam-config_file.Po  SDLcam-dump_thomas.Po  SDLcam-dyn_misc.Po  SDLcam-init.Po  SDLcam-interface.Po  SDLcam-main.Po  SDLcam-parser.Po  SDLcam-webcam.Po
Projects/sdlcam-0.8.2/Documentation/: Makefile  Makefile.am  config_file.txt
Projects/sdlcam-0.8.2/capture/: Makefile  Makefile.am
Projects/sdlcam-0.8.2/filter/: Absdiff.c  Barcode.c  Dark.c  Deep.c  Doublesize.c  Enhance_YUV.c  Flip_x.c  Flip_y.c  Generic_mmx_bbv.c  Halfsize_mmx.c  Lowpass.c  Makefile.am  Makefile.in  Noise.c  RGB_YUV.c  Range.c  Trashmask.c  YUV_YUV420P.c  pixelize.c
Projects/sdlcam-0.8.2/filter/.deps/: Dither.Plo  Flip_x.Plo  Highpass.Plo  Noise.Plo  Posterized.Plo  RGB_YUV.Plo  Time_random.Plo  Trashmask.Plo  YUV_YUV420P.Plo
Projects/sdlcam-0.8.2/sources/: Makefile  Makefile.in
Projects/sdlcam-0.8.2/sources/.deps/: jpeg.Plo
trunk/: actions.cpp  mouse.cpp  test.pro
trunk/Projects/konqueror3-embedded-0.2-20040126/konq-embed/kdesrc/kdecore/: .cvsignore  Makefile  Makefile.am  Makefile.in  kasyncio.cpp  kasyncio.h  kbufferedio.h  kcharsets.h  kdebugclasses.h  kextsock.cpp  ksockaddr.cpp  ksockaddr.h  kstandarddirs.cpp  ktempfile.cpp  netsupp.h
trunk/Projects/konqueror3-embedded-0.2-20040126/konq-embed/kdesrc/kdecore/malloc/: Makefile
trunk/Projects/konqueror3-embedded-0.2-20040126/konq-embed/kdesrc/khtml/ecma/: Makefile.am  kjs_window.cpp
trunk/Projects/konqueror3-embedded-0.2-20040126/konq-embed/kdesrc/kio/http/: .cvsignore  Makefile.am  Makefile.in  http.cc  http.h  no-webdav_patch.txt
trunk/Projects/konqueror3-embedded-0.2-20040126/konq-embed/kdesrc/kio/http/kcookiejar/: .cvsignore  Makefile  Makefile.am  Makefile.in  kcookieserver.cpp  kcookieserver.h  kcookiewin.cpp
trunk/Projects/sdlcam-0.8.2/: ChangeLog  Makefile.am  Makefile.in  SDL_v4l.h  SDL_v4l_filters.c  SDL_v4l_filters.h  SDLcam.xml.in  TODO  aclocal.m4  capture.h  config.h  config.h.in  config.status  config_file.c  config_file.h  configuration.cpp  configuration.h  dump_thomas.c  dump_thomas.h  dyn_misc.c  ftp-upload.c  ftp-upload.h  init.h  input.h  logo.c  main.h  misc.c  misc.h  parser.c  parser.h  xml_theme.cpp
trunk/Projects/sdlcam-0.8.2/.deps/: SDLcam-SDL_v4l.Po  SDLcam-capture.Po  SDLcam-configuration.Po  SDLcam-ftp-upload.Po  SDLcam-logo.Po  SDLcam-misc.Po  SDLcam-xml_theme.Po
trunk/Projects/sdlcam-0.8.2/Documentation/: Makefile.in  gui.txt
trunk/Projects/sdlcam-0.8.2/capture/: Makefile.in  divx.c  divx2.cpp  mpeg.c
trunk/Projects/sdlcam-0.8.2/filter/: AdaptRange.c  Bluebox.c  Dither.c  Generic_mmx_bbb.c  GrayScale_Y.c  Highpass.c  Info_levels.c  Light_only.c  Makefile  Posterized.c  RGB2BGR.c  Rotate90.c  Time_random.c  colorness.c  scanlines.c
trunk/Projects/sdlcam-0.8.2/filter/.deps/: Absdiff.Plo  AdaptRange.Plo  Barcode.Plo  Bluebox.Plo  Dark.Plo  Deep.Plo  Doublesize.Plo  Enhance_YUV.Plo  Flip_y.Plo  Generic_mmx_bbb.Plo  Generic_mmx_bbv.Plo  GrayScale_Y.Plo  Halfsize_mmx.Plo  Info_levels.Plo  Light_only.Plo  Lowpass.Plo  RGB2BGR.Plo  Range.Plo  Rotate90.Plo  colorness.Plo  pixelize.Plo  scanlines.Plo
trunk/Projects/sdlcam-0.8.2/sources/: Makefile.am  jpeg.cpp
wiki/: About.wiki  Plataforma.wiki
(+2221 files in other folders)
