libdir = @libdir@/filters
lib_LTLIBRARIES = Absdiff.la AdaptRange.la Barcode.la Bluebox.la colorness.la Dark.la Deep.la Dither.la Doublesize.la Enhance_YUV.la Flip_x.la Flip_y.la Generic_mmx_bbb.la Generic_mmx_bbv.la GrayScale_Y.la Halfsize_mmx.la Highpass.la Info_levels.la Light_only.la Lowpass.la Noise.la pixelize.la Posterized.la Range.la RGB2BGR.la RGB_YUV.la Rotate90.la scanlines.la Time_random.la Trashmask.la YUV_YUV420P.la
Absdiff_la_SOURCES = Absdiff.c
Absdiff_la_LDFLAGS = -module -avoid-version
AdaptRange_la_SOURCES = AdaptRange.c
AdaptRange_la_LDFLAGS = -module -avoid-version
Barcode_la_SOURCES = Barcode.c
Barcode_la_LDFLAGS = -module -avoid-version
Bluebox_la_SOURCES = Bluebox.c
Bluebox_la_LDFLAGS = -module -avoid-version
colorness_la_SOURCES = colorness.c
colorness_la_LDFLAGS = -module -avoid-version
Dark_la_SOURCES = Dark.c
Dark_la_LDFLAGS = -module -avoid-version
Deep_la_SOURCES = Deep.c
Deep_la_LDFLAGS = -module -avoid-version
Dither_la_SOURCES = Dither.c
Dither_la_LDFLAGS = -module -avoid-version
Doublesize_la_SOURCES = Doublesize.c
Doublesize_la_LDFLAGS = -module -avoid-version
Enhance_YUV_la_SOURCES = Enhance_YUV.c
Enhance_YUV_la_LDFLAGS = -module -avoid-version
Flip_x_la_SOURCES = Flip_x.c
Flip_x_la_LDFLAGS = -module -avoid-version
Flip_y_la_SOURCES = Flip_y.c
Flip_y_la_LDFLAGS = -module -avoid-version
Generic_mmx_bbb_la_SOURCES = Generic_mmx_bbb.c
Generic_mmx_bbb_la_LDFLAGS = -module -avoid-version
Generic_mmx_bbv_la_SOURCES = Generic_mmx_bbv.c
Generic_mmx_bbv_la_LDFLAGS = -module -avoid-version
GrayScale_Y_la_SOURCES = GrayScale_Y.c
GrayScale_Y_la_LDFLAGS = -module -avoid-version
Halfsize_mmx_la_SOURCES = Halfsize_mmx.c
Halfsize_mmx_la_LDFLAGS = -module -avoid-version
Highpass_la_SOURCES = Highpass.c
Highpass_la_LDFLAGS = -module -avoid-version
Info_levels_la_SOURCES = Info_levels.c
Info_levels_la_LDFLAGS = -module -avoid-version
Light_only_la_SOURCES = Light_only.c
Light_only_la_LDFLAGS = -module -avoid-version
Lowpass_la_SOURCES = Lowpass.c
Lowpass_la_LDFLAGS = -module -avoid-version
Noise_la_SOURCES = Noise.c
Noise_la_LDFLAGS = -module -avoid-version
pixelize_la_SOURCES = pixelize.c
pixelize_la_LDFLAGS = -module -avoid-version
Posterized_la_SOURCES = Posterized.c
Posterized_la_LDFLAGS = -module -avoid-version
Range_la_SOURCES = Range.c
Range_la_LDFLAGS = -module -avoid-version
RGB2BGR_la_SOURCES = RGB2BGR.c
RGB2BGR_la_LDFLAGS = -module -avoid-version
RGB_YUV_la_SOURCES = RGB_YUV.c
RGB_YUV_la_LDFLAGS = -module -avoid-version
Rotate90_la_SOURCES = Rotate90.c
Rotate90_la_LDFLAGS = -module -avoid-version
scanlines_la_SOURCES = scanlines.c
scanlines_la_LDFLAGS = -module -avoid-version
Time_random_la_SOURCES = Time_random.c
Time_random_la_LDFLAGS = -module -avoid-version
Trashmask_la_SOURCES = Trashmask.c
Trashmask_la_LDFLAGS = -module -avoid-version
YUV_YUV420P_la_SOURCES = YUV_YUV420P.c
YUV_YUV420P_la_LDFLAGS = -module -avoid-version
