
INCLUDES = -I$(srcdir)/../../../../dropin -I$(srcdir)/../../../../dropin/kio \
	   -I$(srcdir)/../../../kdecore \
           $(QTOPIA_INCLUDES) $(all_includes)

noinst_LTLIBRARIES = libkcookiejar.la

libkcookiejar_la_SOURCES = kcookiejar.cpp kcookieserver.cpp \
			   kcookieserver_skel.cpp kcookiewin.cpp 
libkcookiejar_la_METASOURCES = AUTO


KDE_OPTIONS = qtonly
